Obnam NEWS
==========


This file summarizes changes between releases of Obnam.

Version 1.UNRLEASED, released UNRELEASED
--------------------------------

* Added a note to `--node-size` that it only affects new B-trees.
  Thanks, Michael Brown.
* Notify user of errors during backups.
* New `obnam diff` subcommand to show differences (added/removed/modified
  files) between two generations, by Peter Valdemar Mørch.
* `obnam backup` now logs the names of files that are getting backed up
  at the INFO level rather than DEBUG.

Version 1.1, released 2012-06-30
--------------------------------

* Mark the `--small-files-in-btree` settings as deprecated.
* Obnam now correctly checks that `--repository` is set.
* Options in `--help` output are now grouped in random senseless ways
  rather than being in one randomly ordered group.
* Manual page clarification for `--root` and `verify`. Thanks, Saint Germain.
* Remove outdated section from manual page explaining that there is not
  format conversion. Thanks, Elrond of Samba-TNG.
* Added missing information about specifying a user in sftp URLs. Thanks,
  Joey Hess, for pointing it out.
* Manual page clarification on `--keep` from Damien Couroussé.
* Make `obnam forget` report which generations it would remove without
  `--pretend`. Thanks, Neal Becker, for the suggestion.

Version 1.0, released 2012-06-01
--------------------------------

* Fixed bug in finding duplicate files during a backup generation.
  Thanks to Saint Germain for reporting the problem.
* Changed version number to 1.0.

Version 0.30, released 2012-05-30; a RELEASE CANDIDATE
------------------------------------------------------

Only bug fixes, and only in the test suite.

* Fix test case problem when `$TMPDIR` lacks `user_xattr`. The extended
  attributes test won't succeed in that case, and it's pointless to run it.
* Fix test case problem when `$TMPDIR` lacks nanosecond timestamps for